# jsonldframe2schema

./: .flake8  .gitignore  ALGORITHM.md  CONTRIBUTING.md  MAPPING.md  README.md  SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: AGENT_INSTRUCTIONS.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html
examples/: basic_examples.py  schema_org_examples.py  validation_examples.py
jsonldframe2schema/: __init__.py  __main__.py  cli.py  converter.py
playground/: README.md  TESTING.md  index.html
spec/: README.md  index.html
tests/: __init__.py  conftest.py  download_test_suite.py  expected_schemas.py  run_tests.py  test_converter.py  test_framing_validation.py  test_playground_e2e.py  test_test_cases.py  test_w3c_integration.py
tests/expected_schemas/: array_frame.json  basic_person.json  embed_false.json  empty_frame.json  explicit_frame.json  id_coercion.json  id_match.json  match_none_type.json  multiple_id.json  multiple_types.json  nested_explicit.json  non_explicit_frame.json  require_all.json  typed_properties.json  wildcard_id.json  wildcard_type.json
tests/test_cases/: README.md  array-frame.json  array-frame.jsonld  basic-type.json  basic-type.jsonld  embed-false.json  embed-false.jsonld  empty-frame.json  empty-frame.jsonld  explicit-false.json  explicit-false.jsonld  explicit-true.json  explicit-true.jsonld  graph-container.json  graph-container.jsonld  id-coercion.json  id-coercion.jsonld  index-container.json  index-container.jsonld  language-filter.json  language-filter.jsonld  language-map-container.json  language-map-container.jsonld  list-container.json  list-container.jsonld  multi-nested.json  multi-nested.jsonld  multiple-types.json  multiple-types.jsonld  nested-explicit.json  nested-explicit.jsonld  nested-object.json  nested-object.jsonld  omit-default.json  omit-default.jsonld  require-all.json  require-all.jsonld  reverse-frame.json  reverse-frame.jsonld  set-container-with-type.json  (+17 more)
