[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonldframe2schema"
dynamic = ["version"]
description = "A library that converts JSON-LD frames into JSON Schema definitions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jesse Wright", email = "jesse@jessewwright.com"}
]
keywords = ["json-ld", "json-schema", "framing", "linked-data", "schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyld>=2.0.3",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "python-semantic-release>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/jeswr/jsonldframe2schema"
Repository = "https://github.com/jeswr/jsonldframe2schema"
Issues = "https://github.com/jeswr/jsonldframe2schema/issues"

[tool.setuptools]
packages = ["jsonldframe2schema"]

[tool.setuptools.dynamic]
version = {attr = "jsonldframe2schema.__version__"}

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.semantic_release]
version_variables = ["jsonldframe2schema/__init__.py:__version__"]
build_command = "pip install build && python -m build"
major_on_zero = true
branch = "main"
upload_to_pypi = false
upload_to_release = true
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
